--- a/css/input.css
+++ b/css/input.css
@@ -8,7 +8,7 @@
   --emerald-green-active: #014a3c;
 
   --antique-gold: #c5a05a;
-  --antique-gold-hover: #d4b06a;
+  --antique-gold-hover: #d4ac5b;
   --antique-gold-active: #b6914a;
 }
 
@@ -23,6 +23,10 @@
 
   .btn-secondary {
     @apply bg-[var(--antique-gold)] hover:bg-[var(--antique-gold-hover)] active:bg-[var(--antique-gold-active)];
+  }
+
+  .cards {
+    @apply shadow-xl;
   }
 }
 
