--- a/css/input.css
+++ b/css/input.css
@@ -14,6 +14,10 @@
   --sold-gray: #6d6d6d;
   --sold-gray-hover: #838383;
   --sold-gray-active: #636363;
+
+  --delete-red: #b3261e;
+  --delete-red-hover: #d52b1e;
+  --delete-red-active: #8e1f1a;
 }
 
 @layer components {
@@ -31,6 +35,10 @@
 
   .btn-sold {
     @apply bg-[var(--sold-gray)]  hover:bg-[var(--sold-gray-hover)] active:bg-[var(--sold-gray-active)];
+  }
+
+  .btn-delete {
+    @apply bg-[var(--delete-red)]  hover:bg-[var(--delete-red-hover)] active:bg-[var(--delete-red-active)];
   }
 
   .cards {
